# voxel

./: .gitmodules  CMakeLists.txt
shader/: shader.frag  shader.vert
src/: asset.h.in  main.cpp
src/core/: application.cpp  application.h  core_application.cpp  core_application.h  shader.cpp  shader.h
src/ogl/: glError.cpp  glError.h
